[gd_scene load_steps=14 format=3 uid="uid://byxbcaf1scbhq"]

[ext_resource type="Script" uid="uid://d35vujgw0gwx1" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://dhwvayrhqa77w" path="res://player/test.jpg" id="2_rkbax"]
[ext_resource type="PackedScene" uid="uid://dnlyyya3m6omh" path="res://components/rps_component.tscn" id="3_yw30f"]
[ext_resource type="PackedScene" uid="uid://di46oww8318i7" path="res://components/hitbox_component.tscn" id="4_qjkh3"]
[ext_resource type="PackedScene" uid="uid://5lapc8r0j8bx" path="res://components/health_component.tscn" id="5_qjkh3"]

[sub_resource type="Curve" id="Curve_qjkh3"]
_data = [Vector2(0, 0), 0.0, 6.27438, 0, 0, Vector2(0.23913, 0.842763), 0.667124, 0.667124, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_g6k8r"]
_data = [Vector2(0, 0), 0.0, 3.79656, 0, 0, Vector2(0.0942029, 0.717507), 1.90016, 1.90016, 0, 0, Vector2(0.229469, 0.920049), 0.418501, 0.418501, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_kqu6x"]
radius = 59.0762

[sub_resource type="Animation" id="Animation_yw30f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -99)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rkbax"]
resource_name = "idle"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -99)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0698132, 0.0698132]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "move"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-16, -99), Vector2(-16, -126), Vector2(-16, -99)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"RESET": SubResource("Animation_yw30f"),
&"idle": SubResource("Animation_rkbax"),
&"move": SubResource("Animation_g1dw6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6k8r"]
size = Vector2(90, 135)

[node name="Player" type="CharacterBody2D"]
collision_mask = 4
motion_mode = 1
script = ExtResource("1_rkbax")
ACCELERATION_CURVE = SubResource("Curve_qjkh3")
DECCELERATION_CURVE = SubResource("Curve_g6k8r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-16, -99)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_rkbax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kqu6x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qjkh3")
}
playback_default_blend_time = 0.4

[node name="RPSComponent" parent="." instance=ExtResource("3_yw30f")]
priority = 2

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("rps_component") instance=ExtResource("4_qjkh3")]
collision_mask = 2
rps_component = NodePath("../RPSComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-6, -73.5)
shape = SubResource("RectangleShape2D_g6k8r")

[node name="HealthComponent" parent="." instance=ExtResource("5_qjkh3")]

[connection signal="lose" from="HitboxComponent" to="." method="_on_hitbox_component_lose"]
[connection signal="win" from="HitboxComponent" to="." method="_on_hitbox_component_win"]
[connection signal="die" from="HealthComponent" to="." method="_on_health_component_die"]
